Unit tests rework + JDK 17 upgrade